Se agrego funcionamiento en JS

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
-          position: absolute;
-          z-index: 4;
+         
         font-size: 11px;
-        text-align: center;
-        bottom: -130px;
-  
+       text-align: center;
+        
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -37,10 +35,10 @@
     <section class="container-reloj">
       <h1>We're launching soon </h1>
       <div class="reloj-item" >
-        <div class="fecha" id="day"><span class="num">08</span><span class="detalle">Days</span></div>
-        <div class="fecha" id="hour"><span class="num">23</span><span  class="detalle">Hours</span></div>
-        <div class="fecha" id="min"><span class="num">55</span><span  class="detalle">Minutes </span></div>
-        <div class="fecha" id="seg"><span class="num">41</span><span  class="detalle">Seconds</span></div>
+        <div class="fecha" ><span id="day"  class="num"></span><span class="detalle">Days</span></div>
+        <div class="fecha" ><span id="hour" class="num"></span><span  class="detalle">Hours</span></div>
+        <div class="fecha" ><span id="min" class="num"></span><span  class="detalle">Minutes </span></div>
+        <div class="fecha" ><span id="seg" class="num"></span><span  class="detalle">Seconds</span></div>
       </div>
     </section>
     <img class="start" src="images/bg-stars.svg" alt="">
